8310176: JDK 11 G1 crash during full GC with +UseStringDeduplication
Reviewed-by: phh, rrich