@@ -383,6 +383,23 @@ class TestStringDeduplicationTools {
         output.shouldHaveExitValue(0);
     }
 
+    public static void testTableRehashFullGC() throws Exception {
+        // Test with StringDeduplicationRehashALot using full GCs
+        // Table resizing prevents table rehashing from happening, thus we use
+        // SmallNumberOfStrings to limit the number of table resizes.
+        OutputAnalyzer output = DeduplicationTest.run(SmallNumberOfStrings,
+                                                      DefaultAgeThreshold,
+                                                      FullGC,
+                                                      "-Xlog:gc,gc+stringdedup=trace",
+                                                      "-XX:+StringDeduplicationRehashALot");
+        output.shouldContain("Concurrent String Deduplication");
+        output.shouldContain("Deduplicated:");
+        output.shouldContain("Full GC");
+        output.shouldMatch("Rehash Count: [1-9]");
+        output.shouldNotContain("Hash Seed: 0x0");
+        output.shouldHaveExitValue(0);
+    }
+
     public static void testAgeThreshold() throws Exception {
         OutputAnalyzer output;
 
